--- a/css/styles.css
+++ b/css/styles.css
@@ -14,17 +14,16 @@ header h2 {
     color: #CEC8FF;
 }
 
-footer {
+.site-footer {
     background-image: linear-gradient(#CEC8FF, white);
     padding: 20px 0;
 }
 
 .jumbotron {
+    margin: 0;
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
     color: white;
-    margin: 0;
-
 }
 
 .row-content {
@@ -32,17 +31,52 @@ footer {
     border-bottom: 1px ridge;
     min-height: 200px;
 }
+
 .navbar {
     background-color: #901CAD;
 }
-a, a:hover {
-    color: inherit;
-    text-decoration: none;
-  }
-  .carousel-caption {
+
+.carousel-caption {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
 .carousel {
     border: solid #5637DD;
 }
+/* My borders showing different div */
+.col, div[class^="col-"], label[class^="col-"] {
+    border: 1px solid red;
+    margin: 2px; 
+    
+  } 
+  
+  .row {
+    border: 3px solid blue;
+    padding: 2px;
+    margin: 5px;
+  }
+  
+  .container, .container-fluid {
+    border: 3px solid green;
+    padding: 2px;
+    margin: 5px;    
+  }
+  
+  .media {
+    border: 3px solid yellow;
+    padding: 2px;
+    margin: 5px;       
+  }  
+  
+  .card {
+    border: 3px solid purple;
+    padding: 2px;
+    margin: 5px;    
+  }
+  
+  .orange-border {
+  
+    border: 1px solid green;
+  
+  } 
+  
